@@ -27,7 +27,7 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
 
 ########### install files ###############
 
-install(FILES  simspark.rb soccersim.rb naosoccersim.rb 
+install(FILES  rcssserver3d.rb soccersim.rb naosoccersim.rb 
         internalsoccermonitor.rb internalsoccerbindings.rb
         DESTINATION ${DATADIR}/${CMAKE_PROJECT_NAME})
 
